--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
 
 <body>
 
+  <header class="header">
+    <section class="navigation">
+      <h1>Fun Bus</h1>
+      <nav class="links">
+        <a href="#">Home</a>
+        <a href="#">About us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </section>
+  </header>
   
-     
+  
   <div class="container home">
+    
+    <img src="./img/fun-bus.jpg" alt="campervan on beach">
    
     <section class="content-section">
       <div class="text-content">
