Update global.less for <a> formatting

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </section>
   </header>
   
-  
   <div class="container home">
     
     <img src="./img/fun-bus.jpg" alt="campervan on beach">
+    
+    <h2>Welcome To Fun Bus!</h2>
+    <p>Travelling etc long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence.</p>
    
     <section class="content-section">
       <div class="text-content">
