--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     
     <img src="./img/fun-bus.jpg" alt="campervan on beach">
     
-    <h2>Welcome To Fun Bus!</h2>
-    <p>Travelling etc long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence.</p>
+    <div class="introduction">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Travelling etc long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence long sentence.</p>
+    </div>
    
     <section class="content-section">
       <div class="text-content">
@@ -61,8 +63,8 @@
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
       <img src="img/destination.jpg" alt="Second slide">
     </section>
-    <section class="content-pick">
 
+    <section class="content-pick">
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
